Page MenuHome GnuPG

Kleopatra: Please Certify Dialog is no longer shown
Closed, ResolvedPublic

Description

Since the last release of Kleopatra (3.1.22) the pleaseCertify dialog is no longer shown after importing a single certificate.

I have tried it with

GNUPGHOME=$(mktemp -d) kleopatra ~/certs/andre.heinecke.asc

and it does not show.

According to debug output I added in ImportCertificatesCommand::Private::showDetails the size of the "res" vector is 2. "run-import" in gpgme seems to report only one result and also the Output in the details dialog of Kleopatra is correct.

Details

Version
3.1.22

Event Timeline

aheinecke created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Aug 22 2022, 4:08 PM
ikloecker changed the task status from Open to Testing.Aug 22 2022, 5:59 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
ikloecker added a subscriber: ikloecker.
werner removed a project: Restricted Project.Sep 22 2022, 10:49 AM
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

works