Fix asking for certification of single imported OpenPGP key

When importing from a file there are now always two ImportResultData,
one for OpenPGP and one for CMS. This makes the check for a single
imported OpenPGP key a bit more complicated.

GnuPG-bug-id: 6144